# trading-io

./: .dockerignore  .env.example  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  todo.md
docs/: ARCHITECTURE.md
scripts/: start.sh  stop.sh
src/: main.rs
src/backtest/: runner.rs
src/config/: settings.rs
src/control/: telegram.rs
src/core/: types.rs
src/data/: provider.rs
src/execution/: broker.rs
src/portfolio/: state.rs
src/risk/: manager.rs
src/strategy/: engine.rs
src/trading/: engine.rs
src/utils/: logging.rs
tests/: smoke_test.rs
